Fix (metadata scroll and long abstract overlapping)

--- a/client/app/scripts/superdesk-authoring/styles/themes.less
+++ b/client/app/scripts/superdesk-authoring/styles/themes.less
@@ -239,7 +239,7 @@ body, html {
 
 	.headline {
 		.text-editor {
-			height: 33px;
+			min-height: 33px;
 			font-size:28px;
 			line-height: 120%;
 			.text-semibold();
@@ -249,7 +249,7 @@ body, html {
 
 	.abstract {
 		.text-editor {
-			height: 24px;
+			min-height: 24px;
 			font-style: italic;
 		}
 	}
