--- a/client/app/scripts/superdesk-items-common/styles/media-archive.less
+++ b/client/app/scripts/superdesk-items-common/styles/media-archive.less
@@ -65,7 +65,7 @@
 .archive-content {
 	position:absolute;
 	top:0px; right:0px; bottom:0px; left:0px;
-	height:auto;
+	height: calc(~'100% - 30px');
 	background-color:@sd-background;
 	.transition(left 0.2s ease);
 	z-index: 11;
