--- a/client/app/styles/less/layouts.less
+++ b/client/app/styles/less/layouts.less
@@ -139,7 +139,7 @@ a:hover {
 		z-index: 1;
 		.transition(right ease 0.2s);
 		.shadow-list-holder {
-			padding: 20px 20px 20px+@bottom-view-padding 20px;
+			padding: 20px;
 		}
 		> header {
 			background-color:@sd-background;
